# solana-grpc

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/geyser/: Cargo.toml  build.rs  config.json
crates/geyser/src/: config.rs  filters.rs  grpc.rs  metrics.rs  plugin.rs
crates/proto/: Cargo.toml
crates/proto/proto/: geyser.proto  solana-storage.proto
crates/proto/src/plugin/: message.rs
crates/proto/src/plugin/filter/: filter.rs  message.rs
crates/server/: Cargo.toml  config.yml
crates/server/src/: cluster_tpu_info.rs  config.rs  grpc_geyser.rs  lib.rs  metrics.rs  quic_solana.rs  rpc.rs  stake.rs  util.rs
