[workspace]
members = [
    "crates/proto",
    "crates/geyser",
    "crates/client",
    "crates/server",
]

resolver = "2"

[workspace.package]
version = "2.1.13"
authors = ["Bovey Maintainers <maintainers@solana.xyz>"]
repository = "https://github.com/nabob-labs/solana-grpc"
homepage = "https://solana.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
solana-grpc-proto = { path = "crates/proto" }
solana-grpc-geyser = { path = "crates/geyser" }
solana-grpc-client = { path = "crates/client" }
solana-grpc-server = { path = "crates/server" }

affinity = "0.1.2"
anyhow = "1.0.69"
async-trait = "0.1.83"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.10.0"
cargo-lock = "10.0.1"
chrono = "0.4.26"
clap = "4.5.2"
criterion = "0.5.1"
crossbeam-channel = "0.5.8"
derivative = "2.2.0"
env_logger = "0.11.3"
etcd-client = "0.14.0"
futures = "0.3.30"
git-version = "0.3.5"
hex = "0.4.3"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.5.0"
hyper-util = "0.1.7"
indicatif = "0.17.9"
jsonrpsee = "0.24.7"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
log = "0.4.17"
lru = "0.12.3"
maplit = "1.0.2"
pin-project = "1.1.5"
prometheus = "0.13.3"
prost = "0.13.3"
prost-types = "0.13.3"
prost_011 = { package = "prost", version = "0.11.9" }
protobuf-src = "1.1.0"
quinn = "0.11.6"
quinn-proto = "0.11.6"
rand = "0.8.5"
rustls = { version = "0.23.15", default-features = false }
semver = "1.0.22"
serde = "1.0.215"
serde_json = "1.0.116"
serde_yaml = "0.9.25"
solana-geyser-plugin-interface = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-account-decoder = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-logger = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-sdk = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-storage-proto = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-transaction-status = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-client = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-connection-cache = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-net-utils = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-program = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-quic-client = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-rpc-client-api = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-streamer = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-tpu-client = { git = "https://github.com/nabob-labs/solana-spe.git" }
solana-version = { git = "https://github.com/nabob-labs/solana-spe.git" }
spl-token-2022 = { git = "https://github.com/nabob-labs/solana-spe.git" }
smallvec = "1.13.2"
thiserror = "1.0.63"
tokio = "1.21.2"
tokio-stream = "0.1.11"
tonic = "0.12.1"
tonic-build = "0.12.3"
tonic-health = "0.12.1"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.1"
uuid = "1.11.0"
vergen = "9.0.1"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
