[workspace]
members = [
    "crates/proto",
    "crates/geyser",
    "crates/client",
    "crates/server",
]

resolver = "2"

[workspace.package]
version = "2.1.13"
authors = ["Bovey Maintainers <maintainers@solana.xyz>"]
repository = "https://github.com/nabob-labs/solana-grpc"
homepage = "https://solana.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
solana-grpc-proto = { path = "crates/proto" }
solana-grpc-geyser = { path = "crates/geyser" }
solana-grpc-client = { path = "crates/client" }
solana-grpc-server = { path = "crates/server" }

solana-geyser-plugin-interface = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-account-decoder = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-logger = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-sdk = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-storage-proto = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-transaction-status = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-client = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-connection-cache = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-net-utils = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-program = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-quic-client = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-rpc-client-api = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-streamer = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-tpu-client = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
solana-version = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }
spl-token-2022 = { git = "https://github.com/nabob-labs/solana-spe.git", branch = "2.0.24" }

affinity = "0.1.2"
anyhow = "1.0.62"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.3.0"
cargo-lock = "10.0.1"
chrono = "0.4.26"
clap = "4.3.0"
criterion = "0.5.1"
crossbeam-channel = "0.5.8"
env_logger = "0.11.3"
futures = "0.3.24"
git-version = "0.3.5"
hex = "0.4.3"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
indicatif = "0.17.9"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
log = "0.4.17"
maplit = "1.0.2"
prometheus = "0.13.2"
prost = "0.13.1"
prost-types = "0.13.3"
prost_011 = { package = "prost", version = "0.11.9" }
protobuf-src = "1.1.0"
serde = "1.0.145"
serde_json = "1.0.86"
smallvec = "1.13.2"
thiserror = "1.0.63"
tokio = "1.21.2"
tokio-stream = "0.1.11"
tonic = "0.12.1"
tonic-build = "0.12.1"
tonic-health = "0.12.1"
vergen = "9.0.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"