[workspace]
members = [
    "crates/proto",
    "crates/geyser",
    "crates/client",
]

resolver = "2"

[workspace.package]
version = "2.2.17"
authors = ["Bovey Maintainers <maintainers@solana.xyz>"]
repository = "https://github.com/nabob-labs/solana-grpc"
homepage = "https://solana.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
solana-grpc-proto = { path = "crates/proto", default-features = false, version = "2.2.17" }
solana-grpc-geyser = { path = "crates/geyser", version = "2.2.17" }
solana-grpc-client = { path = "crates/client", version = "2.2.17" }

agave-geyser-plugin-interface = "=2.2.17"
solana-transaction-status = "=2.2.17"
solana-account-decoder = "=2.2.17"
solana-storage-proto = "=2.2.17"
solana-transaction-context = "=2.2.17"
solana-account = "2.2.1"
solana-clock = "2.2.2"
solana-hash = "2.3.0"
solana-keypair = "2.2.3"
solana-logger = "2.3.1"
solana-message = "2.4.0"
solana-pubkey = "2.4.0"
solana-signature = "2.3.0"
solana-signer = "2.2.1"
solana-transaction = "2.2.3"
solana-transaction-error = "2.2.1"
spl-token-2022 = "8.0.0"

affinity = "0.1.2"
anyhow = "1.0.62"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.3.0"
cargo-lock = "10.0.1"
chrono = "0.4.26"
clap = "4.3.0"
criterion = "0.5.1"
crossbeam-channel = "0.5.8"
env_logger = "0.11.3"
futures = "0.3.24"
git-version = "0.3.5"
hex = "0.4.3"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
indicatif = "0.17.9"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
log = "0.4.17"
maplit = "1.0.2"
prometheus = "0.13.2"
prost = "0.13.1"
prost-types = "0.13.3"
prost_011 = { package = "prost", version = "0.11.9" }
protobuf-src = "1.1.0"
serde = "1.0.145"
serde_json = "1.0.86"
smallvec = "1.13.2"
thiserror = "1.0.63"
tokio = "1.21.2"
tokio-stream = "0.1.11"
tonic = "0.12.1"
tonic-build = "0.12.1"
tonic-health = "0.12.1"
vergen = "9.0.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
agave-geyser-plugin-interface = { git = "https://github.com/nabob-labs/solana-spe.git", tag = "v2.2.17", version = "2.2.17" }
solana-account-decoder = { git = "https://github.com/nabob-labs/solana-spe.git", tag = "v2.2.17", version = "2.2.17" }
solana-storage-proto = { git = "https://github.com/nabob-labs/solana-spe.git", tag = "v2.2.17", version = "2.2.17" }
solana-transaction-status = { git = "https://github.com/nabob-labs/solana-spe.git", tag = "v2.2.17", version = "2.2.17" }
solana-transaction-context = { git = "https://github.com/nabob-labs/solana-spe.git", tag = "v2.2.17", version = "2.2.17" }