[package]
name = "solana-grpc-proto"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
prost = { workspace = true }
solana-account-decoder = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
solana-transaction-status = { workspace = true, optional = true }
tonic = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protobuf-src = { workspace = true }
tonic-build = { workspace = true }

[features]
convert = ["dep:solana-account-decoder", "dep:solana-sdk", "dep:solana-transaction-status"]
default = ["convert"]

[lints]
workspace = true
